--- a/WebContent/test2.html
+++ b/WebContent/test2.html
@@ -9,11 +9,13 @@
 <link rel="stylesheet" type="text/css"
 	href="minified/css/vendor.min.css" />
 	
+	
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.js"></script>
 
 
 <script type="text/javascript">
+	//testing
 	var subid = 'clientsubid1';
 	var client;
 	var msgCallback = function(message) {
