--- a/WebContent/test2.html
+++ b/WebContent/test2.html
@@ -15,9 +15,10 @@
 
 
 <script type="text/javascript">
-	//testing
+	//testing edited
 	var subid = 'clientsubid1';
 	var client;
+	//edited
 	var msgCallback = function(message) {
 		// called when the client receives a STOMP message from the server
 		var p = document.createElement('p');
