updated index.html file

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -92,6 +92,10 @@
 	
       <p>Refresh the page to increase number of hits.</p>
       <p>Close the window and open it again and check the result.</p>
+      
+      <a href="test2.html">WebSocket Test</a><br>
+      <a href="test4.html">WebSocket Test2</a><br>
+      <a href="test5.html">Array Test</a><br>
 
    </body>
 </html>
