--- a/WebContent/angular01/test6.html
+++ b/WebContent/angular01/test6.html
@@ -14,7 +14,7 @@
 
   <body ng-controller="MainCtrl">
     <input type="text" ng-model="color" placeholder="Enter a color"/>
-    <hello-world/>
+    <hello-world color-attr="{{color}}"/>
   </body>
 
 </html>
