--- a/WebContent/angular01/test6.html
+++ b/WebContent/angular01/test6.html
@@ -11,6 +11,7 @@
      
     <script src="app.js"></script>
     <script src="test1.js"></script>
+    <script src="test2.js"></script>
   </head>
 
   <body ng-controller="MainCtrl">
