truthly and falsey

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -25,6 +25,7 @@
       <a href="test4.html">WebSocket Test2</a><br>
       <a href="test5.html">Array Test</a><br>
       <a href="angular01/test6.html">Anguluar01 - directive</a><br>
+      <a href="test7.html">Truthy, Falsey</a><br>
 
 
 
