--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,7 +27,9 @@
       <a href="angular01/test6.html">Anguluar01 - directive</a><br>
       <a href="test7.html">Truthy, Falsey</a><br>
 
-
+		<br>
+		<a href="css_sample/css01.html">CSS testing01</a>
+		
 
    </body>
    
