--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,6 +30,8 @@
 		<br>
 		<a href="css_sample/css01.html">CSS testing01</a>
 		
+		<br>
+		<a href="postmessage/parent.html">Post Message</a>
 
    </body>
    
