--- a/WebContent/test7.html
+++ b/WebContent/test7.html
@@ -24,6 +24,8 @@
 //		console.log("var test1 = []..." + ([] == true));
 //		console.log("var test2 = 0..." + (0 == true));
 	
+		console.log("testing");
+		
 
 		
 	</script>
