--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -33,6 +33,9 @@
 		<br>
 		<a href="postmessage/parent.html">Post Message</a>
 
+		<br>
+		<a href="test8.html">Window.open()/Iframe test</a>
+
    </body>
    
    
